js sorta done time to test

--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,11 @@ div section {
     display: inline-block;
     text-align: center;
 }
+
+.hidden {
+    display: none;
+}
+
+.block {
+    display: block;
+}
