--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,17 @@ p{
 .recent-search-item {
     display: inline-block;
 }
+
+body{
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(16,16,227,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+#footer{
+    display: table;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%
+}
+
